# proserpine

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  build_and_run_tests.bat  build_and_run_tests.sh
include/: proserpine.hpp
scripts/: gen_clangd.py
tests/: CMakeLists.txt  compute_add.comp  proserpine_lib.cpp  test_compute_add.cpp  test_integration.cpp  testing.hpp
tests/compute/: CMakeLists.txt  test_compute_add.cpp
tests/graphics/: CMakeLists.txt  test_vk_cube.cpp  test_vk_triangle.cpp  vk_triangle.vert
tests/integration/: CMakeLists.txt  test_integration.cpp
tests/utils/: logger.hpp  testing.hpp
